@@ -17,6 +17,12 @@ checkbox (0.16.14) UNRELEASED; urgency=low
     Also create a resource job to allow other jobs to determine if an RTC is
     present. (LP: #1184733)
 
+  [ Daniel Manrique ]
+  * jobs/ethernet.txt.in, jobs/wireless.txt.in: Added user-verify jobs to test
+    maximum throughput versus interface's max supported speed.
+  * scripts/network: Minor fixes and tweaks for nicer output and handling of
+    Kb/s and Gb/s.
+
  -- Sylvain Pineau <sylvain.pineau@canonical.com>  Fri, 18 Oct 2013 15:36:53 -0400
 
 checkbox (0.16.13) saucy; urgency=low
